--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,1 +1,29 @@
-{}
+{
+  "login": "تسجيل الدخول",
+  "register": "التسجيل",
+  "phoneNumber": "رقم الهاتف",
+  "verificationCode": "رمز التحقق",
+  "typeVerificationCodeThatSentTo": "اكتب رمز التحقق الذي تم إرساله إلى",
+  "edit": "تعديل",
+  "didNotGetCode": "لم تستلم الرمز؟",
+  "verifyNow": "تحقق الآن",
+  "resend": "إعادة إرسال",
+  "fullName": "الاسم الكامل",
+  "enterYourFullName": "أدخل اسمك الكامل",
+  "email": "البريد الإلكتروني",
+  "optional": "اختياري",
+  "enterYourEmail": "أدخل بريدك الإلكتروني",
+  "selectGender": "حدد الجنس",
+  "male": "ذكر",
+  "female": "أنثى",
+  "city": "المدينة",
+  "selectYourCity": "حدد مدينتك",
+  "whenRegisterYourAccountYouAgreeWith": "عند تسجيل حسابك، أنت توافق على",
+  "termsAndConditions": "الشروط والأحكام",
+  "barber": "حلاق",
+  "barberSalons": "صالونات الحلاقة",
+  "km": "كم",
+  "language": "اللغة",
+  "theme": "السمة",
+  "logout": "تسجيل الخروج"
+}
