--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,5 +2,28 @@
   "login" : "Login",
   "register" : "Register",
   "phoneNumber" : "Phone Number",
-
-}
+  "verificationCode" : "Verification Code",
+  "typeVerificationCodeThatSentTo" : "Type verification code that sent to",
+  "edit" : "Edit",
+  "didNotGetCode" : "Didn't get the code?",
+  "verifyNow" : "Verify Now",
+  "resend" : "Resend",
+  "fullName" : "Full Name",
+  "enterYourFullName" : "Enter Your Full Name",
+  "email" : "Email",
+  "optional" : "Optional",
+  "enterYourEmail" : "Enter Your Email",
+  "selectGender" : "Select Gender",
+  "male" : "Male",
+  "female" : "Female",
+  "city" : "City",
+  "selectYourCity" : "Select Your City",
+  "whenRegisterYourAccountYouAgreeWith" : "When Register Your Account You Agree With",
+  "termsAndConditions" : "Terms & Conditions",
+  "barber" : "Barber",
+  "barberSalons" : "Barber Salons",
+  "km" : "Km",
+  "language" : "Language",
+  "theme" : "Theme",
+  "logout" : "Logout"
+ }
