finish home feature

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -25,5 +25,40 @@
   "km": "كم",
   "language": "اللغة",
   "theme": "السمة",
-  "logout": "تسجيل الخروج"
+  "logout": "تسجيل الخروج",
+  "pleaseEnterYourPhoneNumber": "يرجى إدخال رقم هاتفك",
+  "pleaseEnterValidPhoneNumber": "يرجى إدخال رقم هاتف صالح",
+  "pleaseEnterValidEmail": "يرجى إدخال ايميل صالح",
+  "phoneNumberMustStartWith5": "يجب أن يبدأ رقم الهاتف بالرقم 05",
+  "pleaseEnterYourFullName": "يرجى إدخال اسمك الكامل",
+  "pleaseEnterYourEmail": "يرجى إدخال بريدك الإلكتروني",
+  "pleaseSelectYourCity" : "يرجى اختيار مدينتك",
+  "riyadh" :  "الرياض",
+  "SomethingWentWrong": "حدث خطأ ما. يرجى المحاولة مرة أخرى.",
+  "connectionTimeout": "انتهت مهلة الاتصال. يرجى المحاولة لاحقًا.",
+  "sendTimeout": "انتهت مهلة الإرسال. يرجى التحقق من الاتصال الخاص بك.",
+  "receiveTimeout": "انتهت مهلة الاستلام. يرجى التحقق من الاتصال الخاص بك.",
+  "requestCancelled": "تم إلغاء الطلب. يرجى المحاولة مرة أخرى.",
+  "connectionError": "خطأ في الاتصال. يرجى التحقق من اتصال الإنترنت الخاص بك.",
+  "unexpectedError": "حدث خطأ غير متوقع. يرجى المحاولة مرة أخرى.",
+  "unexpectedServerError": "حدث خطأ في الخادم غير متوقع.",
+  "unauthorizedAccess": "الوصول غير مصرح به. يرجى تسجيل الدخول مرة أخرى.",
+  "forbidden": "محظور. ليس لديك إذن للوصول إلى هذا المورد.",
+  "notFound": "غير موجود. المورد المطلوب غير موجود.",
+  "internalServerError": "خطأ في الخادم الداخلي. يرجى المحاولة لاحقًا.",
+  "serviceUnavailable": "الخدمة غير متوفرة. يرجى المحاولة لاحقًا.",
+  "unexpectedStatusCode": "رمز حالة غير متوقع",
+  "noItemsFound": "لم يتم العثور على عناصر",
+  "numberOfWorkers": "عدد العاملين",
+  "specializedBarbers": "حلاقين متخصصين",
+  "workingHours": "ساعات العمل",
+  "openNow": "مفتوح الآن",
+  "closedNow": "مغلق الآن",
+  "includesServices": "يشمل الخدمات",
+  "didYouLikeTheSalon": "هل أعجبك الصالون؟",
+  "shareWithYourFriends": "شارك مع أصدقائك",
+  "services": "الخدمات",
+  "salonWorkers": "عمال الصالون"
+
+
 }
