--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -25,5 +25,40 @@
   "km" : "Km",
   "language" : "Language",
   "theme" : "Theme",
-  "logout" : "Logout"
+  "logout" : "Logout",
+  "pleaseEnterYourPhoneNumber" : "Please enter your phone number",
+  "pleaseEnterValidPhoneNumber" : "Please enter valid phone number",
+  "pleaseEnterValidEmail" : "Please enter valid email",
+  "phoneNumberMustStartWith5" : "Phone number must start with 05",
+  "pleaseEnterYourFullName" : "Please enter your full name",
+  "pleaseEnterYourEmail" : "Please enter your email",
+  "pleaseEnterVerificationCode" : "Please enter verification code",
+  "pleaseSelectYourCity" : "Please select your city",
+  "SomethingWentWrong" : "Something went wrong. Please try again.",
+  "connectionTimeout" : "Connection timeout. Please try again later.",
+  "sendTimeout" : "Send timeout. Please check your connection.",
+  "receiveTimeout" : "Receive timeout. Please check your connection.",
+  "requestCancelled" : "Request cancelled. Please try again.",
+  "connectionError" : "Connection error. Please check your internet connection.",
+  "unexpectedError" : "An unexpected error occurred. Please try again.",
+  "unexpectedServerError" : "An unexpected server error occurred.",
+  "unauthorizedAccess" : "Unauthorized access. Please login again.",
+  "forbidden" : "Forbidden. You don't have permission to access this resource.",
+  "notFound" : "Not found. The requested resource doesn't exist.",
+  "internalServerError" : "Internal server error. Please try again later.",
+  "serviceUnavailable" : "Service unavailable. Please try again later.",
+  "unexpectedStatusCode" : "Unexpected status code",
+  "riyadh" : "Riyadh",
+  "noItemsFound" : "No items found",
+  "numberOfWorkers": "Number of workers",
+  "specializedBarbers" : "Specialized Barbers",
+  "workingHours" : "Working Hours",
+  "openNow" : "Open Now",
+  "closedNow" : "Closed Now",
+  "includesServices" : "Includes services",
+  "didYouLikeTheSalon" : "Did you like the salon?",
+  "shareWithYourFriends" : "Share with your friends",
+  "services" : "Services",
+  "salonWorkers" : "Salon Workers"
+
  }
